--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 font-family: 'PT Serif',serif; */
 
 h1, h2 {
-  color: #3f1622
+  color: #3f1622;
   font-family: "PT Sans", sans-serif;
   font-size: 1.5rem;
   line-height: 2;
